Fix donor support lists

--- a/index.html
+++ b/index.html
@@ -1271,11 +1271,11 @@
 								<li>Kathryn Finney and Tobias Wright</li>
 							</ul>
 						</div>
+						<h2 style="font-weight: normal;">
+							<strong>Advocates</strong><br>
+							$1,000-$2,499
+						</h2>
 						<div class="group join">
-							<h2>
-								<strong>Advocates</strong><br>
-								$1,000-$2,499
-							</h2>
 							<ul>
 								<li>Anonymous</li>
 								<li>Shari Malyn and Jon Abbott</li>
