--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
 						<div class="content">
 							<h3>Co-creating Podcast Communities Around the World</h3>
 							<p>
-								In 2021, our training team shifted to focus on co-creating podcasting ecosystems with creators around the world. By helping seed pockets of micro-experts, podcasters working with
+								In 2021, our training team prioritized co-creating podcasting ecosystems with creators around the world. By helping seed pockets of micro-experts, podcasters working with
 								<a href="http://prx.org/training" target="_blank">PRX Training</a> will go on to further pollinate their creative communities, increasing knowledge of and accessibility to podcast production wherever they are. Helping build these networks
 								of creators who can grow alongside one another is just as important as the hard skills that they learn through PRX Training programs.
 							</p>
@@ -855,7 +855,7 @@
 								</p>
 								<p>
 									<strong>6</strong><br>
-									Six podcasting teams were trained through the Ready to Learn program with CPB and PBS Kids in 2021.
+									Six podcasting teams were trained through the Ready To Learn program with CPB and PBS Kids in 2021.
 								</p>
 							</div>
 						</div>
@@ -865,7 +865,7 @@
 						<div class="author">
 							<p>
 								<strong>– Janet Perez</strong><br>
-								Ready to Learn team <em>Abi and the Cosmic Caravan</em>
+								Ready To Learn team <em>Abi and the Cosmic Caravan</em>
 							</p>
 						</div>
 					</section>
