--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 						<div class="content">
 							<h2><em>The World</em>:<br>Human-Centered Journalism</h2>
 							<p>
-								In 2021, journalists at <a href="http://theworld.org/" target="_blank"><em>The World</em></a> brought listeners ongoing, deeply reported stories from all around the globe.
+								In 2021, journalists at <a href="http://theworld.org/" target="_blank"><em>The World</em></a> brought listeners ongoing, deeply reported stories from all around the globe. Hosted by Marco Werman,
 								<em>The World</em> balances the big challenges of the day with stories of hope and joy in series like "<a href="https://theworld.org/categories/movement" target="_blank>">Movement</a>,"
 								which tells the stories of migration through music, and "<a href="https://theworld.org/categories/big-fix" target="_blank">The Big Fix</a>," which highlights solutions to climate change.<br><br>
 
