--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 								</p>
 								<p>
 									Our aims were to reduce the friction that stifled opportunities for independent producers and to expand the shelf life of evergreen stories. Prior to
-									this, public radio stations had only two content choices—to either air national programs or to make content themselves. PRX created a middle option giving
-									independent producers local and national broadcast reach, and public radio stations the access to choice. In doing so, we unlocked opportunity for diverse
-									voices, and opened an otherwise closed system. PRX also became the first place you could listen to public radio on the internet.
+									this, public radio stations had only two content choices — to either air national programs or to make content themselves. PRX created a middle option giving
+									independent producers local and national broadcast reach, and public radio stations the access to choice. In doing so, we unlocked opportunities for diverse
+									voices and opened an otherwise closed system. PRX also became the first place you could listen to public radio on the internet.
 								</p>
 								<p>
 									In those early days, PRX had a rebel vibe. We disrupted the status quo to create something new, efficient, and more accessible. Today that nonconformity has
@@ -95,13 +95,13 @@
 									established core values to serve as our north-pointing arrow.
 								</p>
 								<p>
-									On these pages, you will find our values woven throughout our work: Our bold vision and an innovative spirit gives us the courage to take risks. We practice
-									empathy by celebrating the humanity of our colleagues and partners. We believe that excellence is not centrally sourced, and if we create opportunity for many,
-									we all benefit. All of this is in service of our purpose and our vision of a world that values inclusion, diversity, equity and accessibility.
+									On these pages, you will find our values woven throughout our work: Our bold vision and innovative spirit give us the courage to take risks. We practice
+									empathy by celebrating the humanity of our colleagues and partners. We believe that excellence is not centrally sourced, and if we create opportunities for many,
+									we all benefit. All of this is in service of our purpose and our vision of a world that values inclusion, diversity, equity, and accessibility.
 								</p>
 								<p>
-									We want to be the place of big dreams and meaningful impact—an entrepreneurial nonprofit with an expansive mission. We need courage fueled by the ideas,
-									inspiration and support of those we meet along the way. Thank you for your partnership.
+									We want to be the place of big dreams and meaningful impact — an entrepreneurial nonprofit with an expansive mission. We need courage fueled by the ideas,
+									inspiration, and support of those we meet along the way. Thank you for your partnership.
 								</p>
 								<a href="" id="letter-expand">expand</a>
 							</blockquote>
