--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 									Our aims were to reduce the friction that stifled opportunities for independent producers and to expand the shelf life of evergreen stories. Prior to
 									this, public radio stations had only two content choices — to either air national programs or to make content themselves. PRX created a middle option giving
 									independent producers local and national broadcast reach, and public radio stations the access to choice. In doing so, we unlocked opportunities for diverse
-									voices and opened an otherwise closed system. PRX also became the first place you could listen to public radio on the internet.
+									voices and opened an otherwise closed system. PRX also became one of the first places you could listen to public radio on the internet.
 								</p>
 								<p>
 									In those early days, PRX had a rebel vibe. We disrupted the status quo to create something new, efficient, and more accessible. Today that nonconformity has
