--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link rel="icon" type="image/png" href="https://media.prx.org/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" type="image/png" href="https://media.prx.org/favicon-32x32.png" sizes="32x32">
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+		<script defer data-domain="2021.prx.org" src="https://plausible.io/js/plausible.js"></script>
 	</head>
 	<body>
 		<a href="https://give.prx.org/give/323700/#!/donation/checkout?c_src=2021_annual_report" id="donate-cta" target="_blank">Donate</a>
