restore bg-image

--- a/index.html
+++ b/index.html
@@ -507,22 +507,18 @@
 						</div>
 						<img src="images/shows/the-takeaway.jpg" alt="The Takeaway" class="fade-at-100">
 					</section>
-					<section class="staggered">
+					<section class="staggered" style="background-image: url(images/words/aging-while-queer.png);">
 						<p class="intro"></p>
 						<div class="block">
-							<br />
 							<p><a href="https://www.wnycstudios.org/podcasts/takeaway/projects/aging-while-queer" target="_blank">Aging While Queer</a></p>
 						</div>
 						<div class="block">
-							<br />
 							<p><a href="https://www.wnycstudios.org/podcasts/takeaway/projects/deep-dive-dorian-warren" target="_blank">Deep Dive with MHP and Dorrian Warren</a></p>
 						</div>
 						<div class="block">
-							<br />
 							<p><a href="https://www.wnycstudios.org/podcasts/takeaway/projects/ongoing-coverage-voter-suppression" target="_blank">Voter suppression</a></p>
 						</div>
 						<div class="block">
-							<br />
 							<p><a href="https://www.wnycstudios.org/podcasts/takeaway/projects/covid-19-ongoing-coverage-coronavirus-outbreak" target="_blank">COVID-19 pandemic</a></p>
 						</div>
 					</section>
